--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,16 @@ version: '3.8'
 services:
   # API Gateway
   api-gateway:
-    build: ./api-gateway
+    build: .-gateway
     container_name: ecom-api-gateway
     ports:
       - "8080:8080"
     environment:
-      - USER_SERVICE_URL=http://user-service:8000/api
-      - PRODUCT_SERVICE_URL=http://product-service:8000/api
-      - CART_SERVICE_URL=http://cart-service:8000/api
-      - ORDER_SERVICE_URL=http://order-service:8000/api
-      - PAYMENT_SERVICE_URL=http://payment-service:8000/api
+      - USER_SERVICE_URL=http://user-service:8000
+      - PRODUCT_SERVICE_URL=http://product-service:8000
+      - CART_SERVICE_URL=http://cart-service:8000
+      - ORDER_SERVICE_URL=http://order-service:8000
+      - PAYMENT_SERVICE_URL=http://payment-service:8000
     depends_on:
       - user-service
       - product-service
@@ -122,7 +122,7 @@ services:
       - DB_PORT=5432
       - SECRET_KEY=cart_service_secret_key
       - DEBUG=True
-      - PRODUCT_SERVICE_URL=http://product-service:8000/api
+      - PRODUCT_SERVICE_URL=http://product-service:8000
       - RABBITMQ_HOST=rabbitmq
     volumes:
       - cart-static:/app/static
@@ -166,10 +166,10 @@ services:
       - DB_PORT=5432
       - SECRET_KEY=order_service_secret_key
       - DEBUG=True
-      - PRODUCT_SERVICE_URL=http://product-service:8000/api
-      - USER_SERVICE_URL=http://user-service:8000/api
-      - CART_SERVICE_URL=http://cart-service:8000/api
-      - PAYMENT_SERVICE_URL=http://payment-service:8000/api
+      - PRODUCT_SERVICE_URL=http://product-service:8000
+      - USER_SERVICE_URL=http://user-service:8000
+      - CART_SERVICE_URL=http://cart-service:8000
+      - PAYMENT_SERVICE_URL=http://payment-service:8000
       - RABBITMQ_HOST=rabbitmq
     volumes:
       - order-static:/app/static
@@ -211,7 +211,7 @@ services:
       - DB_PORT=5432
       - SECRET_KEY=payment_service_secret_key
       - DEBUG=True
-      - ORDER_SERVICE_URL=http://order-service:8000/api
+      - ORDER_SERVICE_URL=http://order-service:8000
       - RABBITMQ_HOST=rabbitmq
       - RABBITMQ_USER=guest
       - RABBITMQ_PASS=guest
